<resources>
    <string name="app_name">StudyAround</string>

    <string name="icon">icon</string>
    <string name="warning_img">img_warning</string>
    <string name="warning_text">Impossibile contattare il server!\n I dati potrebbero non essere aggiornati!</string>
    <string name="si">si</string>
    <string name="no">no</string>
    <string name="check">CheckBox</string>

    <string name="activity_pren_singolo_1">Seleziona tavolo disponibile:</string>
    <string name="activity_pren_singolo_2">Data:</string>
    <string name="activity_pren_singolo_3">Ora inizio:</string>
    <string name="activity_pren_singolo_4">Ora fine:</string>
    <string name="activity_pren_singolo_5">Conferma</string>
    <string name="activity_pren_gruppo_1">Gruppo</string>
    <string name="activity_pren_gruppo_2">Ore residue</string>
    <string name="activity_pren_gruppo_3">Partecipanti</string>
    <string name="activity_pren_gruppo_4">Data</string>
    <string name="activity_pren_gruppo_5">Cerca Disponibilità</string>
    <string name="activity_iscrizione_1">Codice gruppo:</string>
    <string name="activity_iscrizione_2">codice</string>
    <string name="activity_iscrizione_3">ISCRIVITI</string>
    <string name="activity_group_1">Iscriviti ad un gruppo</string>
    <string name="activity_map_1">torna a lista aule</string>
    <string name="activity_map_2">Seleziona aula:</string>
    <string name="activity_infoaula_1">Servizi Disponibili</string>
    <string name="activity_infoaula_2">Avvisami quando si libera un posto</string>
    <string name="activity_infoaula_3">Prenota Posto</string>
    <string name="activity_infoaula_4">Prenota per Gruppo</string>
    <string name="activity_main_1">Inserisci matricola:</string>
    <string name="activity_main_2">Inserisci password:</string>
    <string name="activity_main_3">Accedi</string>
    <string name="activity_registrazione_1">img_stud</string>
    <string name="activity_registrazione_2">Studente</string>
    <string name="activity_registrazione_3">Docente</string>
    <string name="activity_registrazione_4">Seleziona università:</string>
    <string name="activity_registrazione_5">Inserisci matricola:*</string>
    <string name="activity_registrazione_6">Inserisci nome:</string>
    <string name="activity_registrazione_7">nome</string>
    <string name="activity_registrazione_8">Inserisci cognome:</string>
    <string name="activity_registrazione_9">cognome</string>
    <string name="activity_registrazione_10">Inserisci e-mail:*</string>
    <string name="activity_registrazione_11">e-mail</string>
    <string name="activity_registrazione_12">Crea password:</string>
    <string name="activity_registrazione_13">password</string>
    <string name="activity_registrazione_14">Conferma password:</string>
    <string name="activity_registrazione_15">password</string>
    <string name="activity_registrazione_16">*Matricola ed e-mail universitarie</string>
    <string name="activity_registrazione_17">Registrati</string>
    <string name="activity_registrazione_18">matricola </string>
    <string name="crea_codici_1">Seleziona corso </string>
    <string name="crea_codici_2">Numero massimo di iscritti</string>
    <string name="crea_codici_3">Ore disponibili</string>
    <string name="crea_codici_4">Numero di gruppi</string>
    <string name="crea_codici_5">Nome dei gruppi (opzionale)</string>
    <string name="crea_codici_6">why</string>
    <string name="crea_codici_7">Seleziona la data di scadenza dei gruppi</string>
    <string name="crea_codici_8">Crea i gruppi</string>
    <string name="gestione_gruppi_docente_1">Attivi</string>
    <string name="gestione_gruppi_docente_2">In scadenza</string>
    <string name="gestione_gruppi_docente_3">Scaduti</string>
    <string name="home_studente_1">vai a mappa aule</string>
    <string name="home_docente_1">logo </string>
    <string name="home_docente_2">Caricamento...</string>
    <string name="home_docente_3">Crea gruppi</string>

    <string name="dialog_componenti_1">Seleziona componeneti</string>
    <string name="dialog_componenti_2">Conferma</string>
    <string name="dialog_iscrizione_1">Gruppo:</string>
    <string name="dialog_iscrizione_2">Corso:</string>
    <string name="dialog_iscrizione_3">Docente:</string>
    <string name="dialog_iscrizione_4">Conferma</string>
    <string name="dialog_iscrizione_5">Annulla</string>
    <string name="dialog_pdf_1">PDF</string>
    <string name="dialog_pdf_2">Vuoi scaricare un Pdf con i codici appena creati?</string>
    <string name="dialog_pdf_3">Annulla</string>
    <string name="dialog_pdf_4">Scarica</string>
    <string name="dialog_marker_1">Luogo:</string>
    <string name="dialog_marker_2">Posti totali:</string>
    <string name="dialog_marker_3">Posti liberi:</string>
    <string name="dialog_marker_4">Attualmente:</string>
    <string name="dialog_marker_5">INDICAZIONI</string>
    <string name="dialog_marker_6">info aula</string>
    <string name="dialog_dettagli_gruppo_1">Corso:</string>
    <string name="dialog_dettagli_gruppo_2">Docente:</string>
    <string name="dialog_dettagli_gruppo_3">Scadenza:</string>
    <string name="dialog_dettagli_gruppo_4">Ore disponibili:</string>
    <string name="dialog_dettagli_gruppo_5">Componenti</string>
    <string name="dialog_gestione_gruppo_1">Componenti:</string>
    <string name="dialog_gestione_gruppo_2">Nuova data di scadenza:</string>
    <string name="dialog_gestione_gruppo_3">Ore da aggiungere:</string>
    <string name="dialog_gestione_gruppo_4">ore</string>
    <string name="dialog_gestione_gruppo_5">ANNULLA</string>
    <string name="dialog_legenda_1">Legenda</string>
    <string name="dialog_legenda_a">Prenotazione in corso</string>
    <string name="dialog_legenda_b">Prenotazione futura</string>
    <string name="dialog_legenda_c">Prenotazione terminata o scaduta</string>
    <string name="dialog_legenda_2">Un posto nel tavolo è attualmente riservato a te.</string>
    <string name="dialog_legenda_3">Un posto nel tavolo risulterà riservato a te a partire dall\'orario di inizio della prenotazione.</string>
    <string name="dialog_legenda_4">Il tuo posto è stato liberato, ma puoi comunque entrare o uscire dall\'aula in caso di necessità.</string>
    <string name="dialog_mezzo_1">Seleziona mezzo di trasporto</string>
    <string name="dialog_mezzo_2">Inizia</string>
    <string name="dialog_qr">Vuoi procedere?</string>
    <string name="dialog_prengruppo_1">Seleziona fasce orarie</string>
    <string name="dialog_prengruppo_2">Prenota</string>
    <string name="dialog_password_1">Recupero Password</string>
    <string name="dialog_password_2">Seleziona università:</string>
    <string name="dialog_password_3">matricola</string>
    <string name="dialog_password_4">mail di registrazione</string>
    <string name="dialog_password_5">conferma</string>
    <string name="dialog_scegligruppo">Seleziona gruppo</string>
    <string name="dialog_calendario_1">Seleziona Account</string>
    <string name="dialog_calendario_2">Conferma</string>
    <string name="dialog_calendario_3">annulla</string>
    <string name="dialog_warning_1">Non hai nessuna prenotazione da visualizzare!</string>
    <string name="dialog_warning_2">torna alla home</string>
    <string name="dialog_warning_3">Aggiorna pagina</string>
    <string name="dialog_validazione_button">Ho capito</string>
    <string name="dialog_validazione_title">Registrazione avvenuta con successo!</string>
    <string name="dialog_validazione_text">Ti abbiamo inviato una e-mail per validare il tuo account. Clicca sul link presente nella e-mail prima di procedere con il login.</string>

    <string name="row_home_docente_1">Gruppi totali: </string>
    <string name="row_home_docente_2">in scadenza: </string>
    <string name="row_home_docente_3">scaduti: </string>
    <string name="row_pren_attive_1">Aula:</string>
    <string name="row_pren_attive_2">Inizio:</string>
    <string name="row_pren_attive_3">Fine:</string>
    <string name="row_pren_attive_4">Gruppo:</string>
    <string name="row_pren_attive_5">Stato:</string>

    <string name="header_login">LOGIN</string>
    <string name="header_registrazione">REGISTRAZIONE</string>
    <string name="header_home_studente">Home</string>
    <string name="header_mappe">Mappa Aule</string>
    <string name="header_infoaula">Informazioni Aula</string>
    <string name="header_group">I miei gruppi</string>
    <string name="header_iscrizione">Iscrizione a gruppo</string>
    <string name="header_prensingolo">Prenotazione</string>
    <string name="header_prengruppo">Prenotazione gruppo</string>
    <string name="header_prenattive">Le mie prenotazioni</string>
    <string name="header_scanner">Scannerizza un QR code</string>
    <string name="header_home_docente">I miei corsi</string>
    <string name="header_creagruppi">Crea nuovi gruppi</string>
    <string name="header_gestiscicorsi">I miei gruppi</string>

    <string name="options_home">Home</string>
    <string name="options_aggiorna">Aggiorna</string>
    <string name="options_assistenza">Assistenza</string>
    <string name="options_gruppi">Gestione Gruppi</string>
    <string name="options_prenotazioni">Prenotazioni</string>

    <string name="studente">Studente</string>
    <string name="Mostra_elenco_aule">Mostra elenco aule</string>
    <string name="Mostra_mappa_aule">Mostra mappa aule</string>
    <string name="Conferma_iscrizione">Conferma iscrizione</string>
</resources>
